# m3d

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: camera.rs  lib.rs  matrices.rs  points.rs  quaternion.rs  vectors.rs
tests/: utest_matrix3.rs  utest_quaternion.rs  utest_vector3.rs
