[package]
name = "m3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = "-C target-cpu=native"

[dependencies]
num = "0.1.40"
rayon = "1.5.1"
sdl2 = "0.35"
[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false