[package]
name = "m3d"
version = "0.0.1"
edition = "2021"
readme = "README.md"
license = "MIT/Apache-2.0"
authors = [ "juliuskoskela" ]

description = "3D linear algebra"
documentation = "https://docs.rs/m3d/"
repository = "https://github.com/juliuskoskela/m3d"
keywords = ["mathematics", "graphics", "3D"]
categories = ["mathematics"]

[build]
rustflags = "-C target-cpu=native"

[dependencies]
num = "0.1.40"
rayon = "1.5.1"
sdl2 = "0.35"

[dev-dependencies]
rand = "0.8.4"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
